...
    <string name="password">Hasło</string>
    <string name="sign_in_upper_case">ZALOGUJ SIĘ</string>
    <string name="dont_u_have_an_acc_up_case">NIE MASZ KONTA?</string>
    <string name="sign_up_up_case">ZAREJESTRUJ SIĘ</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="registration">Rejestracja</string>
    <string name="correct_login_data">Poprawne dane logowania</string>
    <string name="incorrect_login_data">Niepoprawne dane logowania</string>
    <string name="incorrect_email">Niepoprawny e-mail</string>
    <string name="incorrect_password">Hasło jest za krótkie (powinno mieć co najmniej 6 znaków), lub składa się z samych \"białych\" znaków</string>
    <string name="incorrect_password_rep">Hasło nie zgadza się z powtórzeniem</string>
    <string name="already_exist">Wpis na ten dzień o podanym tytule już istnieje. Wpisz inny</string>
    <string name="incorrect_title">Tytuł musi zawierać przynajmniej 3 znaki</string>
    <string name="delete_event_dialog">Czy chcesz usunąć wybrane zdarzenie?</string>
...
