<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cal"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_signing_in"
            android:title="@string/signing_in" />
        <item
            android:id="@+id/nav_list"
            android:title="Lista zdarzeń" />
    </group>


</menu>

